--- a/simulation.tex
+++ b/simulation.tex
@@ -158,9 +158,11 @@ Our tests found that \texttt{EVEREST} and PLD are capable of removing instrument
 
 \section{Additional Discussion}
 
+\textcolor{red}{\textbf{Condense into one section.}}
+
 \subsection{Focus Changes}
 
-Due to the internal optics of the Transiting Exoplanet Survey Satellite (\textit{TESS}), observed stellar PSFs will be large relative to the pixels on the CCD. Further, the space telescope's trajectory will cause a periodic variation in the incident sunlight on the telescope, which will affect the quantum sensitivity of pixels. Periodically changing sensitivity could cause \textit{TESS} PSFs to ``breathe" as the temperature rises and falls, and apertures around \textit{TESS} targets will need to expand and contract correspondingly to effectively capture the desired stellar signal. Our forward model serves as an established simulation for cases of time-variable PSFs due to both motion and periodic sensitivity changes.
+Due to the internal optics of the Transiting Exoplanet Survey Satellite (\textit{TESS}), observed stellar PSFs may be large relative to the pixels on the CCD. Further, the space telescope's trajectory could cause a periodic variation in the incident sunlight on the telescope, which will affect the quantum sensitivity of pixels. Periodically changing sensitivity could cause \textit{TESS} PSFs to ``breathe" as the temperature rises and falls, and apertures around \textit{TESS} targets will need to expand and contract correspondingly to effectively capture the desired stellar signal. Our forward model serves as an established simulation for cases of time-variable PSFs due to both motion and periodic sensitivity changes.
 
 
 \subsection{Increased \textit{TESS} Motion}
@@ -171,7 +173,7 @@ The stellar PSF parameters can be easily adjusted in the forward model produced 
 
 \subsection{Ground-based Observations}
 
-Seeing aberation and atmospheric interference are additional sources of noise that could be included in the \texttt{scope} model. PLD was developed for \textit{Spitzer} and modified for application to \textit{K2}, but has seen little application elsewhere. For ground-based observations with significant noise due to pointing issues or atmospheric interference, PLD may be a valuable tool to make the most of data. \texttt{scope} is an ideal testbed for this type of noise-removal because it allows users to perform tests on noisy observations performed on sources that are well understood with input parameters that can be compared to post-processing results. Though it was initially imagined for space-based telescopes, this software has undeniably useful applications for ground-based telescopes.
+Seeing aberation and atmospheric interference are additional sources of noise that could be included in the \texttt{scope} model. PLD was developed for \textit{Spitzer} and modified for application to \textit{K2}, but has seen little application elsewhere. For ground-based observations with significant noise due to pointing issues or atmospheric interference, PLD may be a valuable tool to make the most of data. \texttt{scope} is an ideal testbed for this type of noise-removal because it allows users to perform tests on noisy observations performed on sources that are well understood with input parameters that can be compared to post-processing results. Though it was initially imagined for space-based telescopes, this software has potentially useful applications for ground-based telescopes.
 
 \section{Using \texttt{scope}}
 
