--- a/simulation.tex
+++ b/simulation.tex
@@ -18,11 +18,12 @@
 % \title{Simulated CCD Exoplanet Photometry: High-Motion Space Telescopes}
 \title{Simulated CCD Photometry: Low Pointing-Precision \textit{K2} Observations}
 
-\author{Nicholas Saunders \altaffilmark{1,2,3}, Rodrigo Luger \altaffilmark{1,2}, Rory Barnes \altaffilmark{1,2}}
+\author{Nicholas Saunders \altaffilmark{1,2}, Rodrigo Luger \altaffilmark{3,4}, Rory Barnes \altaffilmark{3,4}}
 
-\altaffiltext{1}{Department of Astronomy, University of Washington, Box 351580, Seattle, WA 98195, USA}
-\altaffiltext{2}{Virtual Planetary Laboratory, Seattle, WA 98195, USA}
-\altaffiltext{3}{nicholas.k.saunders@nasa.gov}
+\altaffiltext{1}{NASA Ames Kepler/K2 Guest Observer Office, Mountain View, CA 94035}
+\altaffiltext{2}{nicholas.k.saunders@nasa.gov}
+\altaffiltext{3}{Department of Astronomy, University of Washington, Box 351580, Seattle, WA 98195, USA}
+\altaffiltext{4}{Virtual Planetary Laboratory, Seattle, WA 98195, USA}
 
 \begin{abstract}
 
