--- a/simulation.tex
+++ b/simulation.tex
@@ -91,7 +91,7 @@ To most accurately capture the characteristics of \textit{K2} data when analyzin
 
 In Benchmark Test 2, we consider the case of current \textit{K2} motion. To accomplish this, we injected motion from 1,000 cadences of the \textit{K2} target EPIC 205998445, creating a simulated example of a current observation to benchmark our model against \textit{K2} data. EPIC 205998445 is a \textit{K2} C03 star with $Kp = 12.029$ located ${\sim}60\%$ of the distance from the center of the detector plane to its edge. Statistics about the motion data used in our simulation can be found in Table \ref{table:motionstatistics}. This star was chosen because it is an isolated $12^{\text{th}}$ magnitude star, and the peak of the magnitude distribution for C03 was roughly 12. It is also located far enough from the center of the detector that it experiences significant motion during roll events, but not too near the edge that its motion is uncharacteristically high for \textit{K2} targets.
 
-With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. We found that a stochastic distribution of sensitivity with ${\sim}1\%$ variation between pixels and ${\sim}5\%$ variation within pixels, from center to edge resulted in Benchmark Test 2 following the expected trend most similarly. The results of Benchmark Test 2 can be seen in Figure \ref{fig:1motion}.
+With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. Sensitivity variation was altered by adjusting the coefficients on the $s(x)s(y)$ polynomial model to achieve different drops in sensitivity from pixels' centers to their edges, as well as adjusting the random variation in sensitivity between pixels. We found that a stochastic distribution of sensitivity with up to $1\%$ variation between pixels and $2.48\%$ variation within pixels, from center to edge, resulted in Benchmark Test 2 following the most similar trend to the expected result. Our sensitivity polynomial went up to third order with coefficients \{1, 0, -0.05\}. The results of Benchmark Test 2 can be seen in Figure \ref{fig:1motion}.
 
 \begin{figure}[h]
 	\centering
