--- a/simulation.tex
+++ b/simulation.tex
@@ -91,6 +91,8 @@ To most accurately capture the characteristics of \textit{K2} data when analyzin
 
 In Benchmark Test 2, we consider the case of current \textit{K2} motion. To accomplish this, we injected motion from 1,000 cadences of the \textit{K2} target EPIC 205998445, creating a simulated example of a current observation to benchmark our model against \textit{K2} data. EPIC 205998445 is a \textit{K2} C03 star with $Kp = 12.029$ located ${\sim}60\%$ of the distance from the center of the detector plane to its edge. Statistics about the motion data used in our simulation can be found in Table \ref{table:motionstatistics}. This star was chosen because it is an isolated $12^{\text{th}}$ magnitude star, and the peak of the magnitude distribution for C03 was roughly 12. It is also located far enough from the center of the detector that it experiences significant motion during roll events, but not too near the edge that its motion is uncharacteristically high for \textit{K2} targets.
 
+To calculate motion, the column pixel correction (\texttt{POS\_CORR1}) and row pixel correction (\texttt{POS\_CORR2}), corresponding to motion in $x$ and $y$ respectively, were accessed from the target pixel file header. These offsets were added to the calculated cetroid position of the simulated PSF for each cadence. Total magnitude of motion as reported in Table \ref{table:motionstatistics} represents the calculated maximum distance between centroid positions over the course of the simulated cadences.
+
 With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. Sensitivity variation was altered by adjusting the coefficients on the $s(x)s(y)$ polynomial model to achieve different drops in sensitivity from pixels' centers to their edges, as well as adjusting the random variation in sensitivity between pixels. We found that a stochastic distribution of sensitivity with up to $1\%$ variation between pixels and $2.48\%$ variation within pixels, from center to edge, resulted in Benchmark Test 2 following the most similar trend to the expected result. Our sensitivity polynomial went up to third order with coefficients \{1, 0, -0.05\}. The results of Benchmark Test 2 can be seen in Figure \ref{fig:1motion}.
 
 \begin{figure}[h]
@@ -125,12 +127,12 @@ To test how PLD performs on targets with high motion relative to the detector, w
 				5 & $0.84\pm0.59$ & 2.93 & $3.34\pm2.37$ & 11.65 \\
 				10 & $1.68\pm1.19$ & 5.85 & $6.68\pm4.74$ & 23.30 \\
    \end{tabular}
-	 \caption{Coefficients applied to the motion vectors of \textit{K2} target EPIC 205998445, an isolated C03 star. A coefficient of 1 corresponds to current motion, and each subsequent coefficient simply increases the motion by that factor. Motion is given in both pixels (pix) and arcseconds (arcsec).}
+	 \caption{Coefficients applied to the motion vectors of \textit{K2} target EPIC 205998445, an isolated C03 star. A coefficient of 1 corresponds to current motion, with each subsequent coefficient simply increasing the magnitude of motion by that factor. Motion is given in both pixels (pix) and arcseconds (arcsec).}
 	 \label{table:motionstatistics}
 \end{center}
 \end{table}
 
-Our method to increase motion involved simply multiplying the pixel offset due to current \textit{K2} motion by constant coefficients. This ensured the target traversed more pixels over a wider range of the detector while keeping the calculation simple enough to avoid introducing new opportunity for error. Because it is still unclear exactly how increased motion will manifest in the spacecraft's observations when fuel is expended, we opted to examine the simplest case. It should be noted that this may not be the most appropriate treatment for all de-trending methods, but because the method used in the \texttt{EVEREST} pipeline (pixel level decorrelation) is agnostic to cetroid position, our treatment of motion is thorough enough for the goal of testing noise-removal methods. \textcolor{red}{\textbf{Figure out how to say more about this.}}
+Our method to increase motion involved simply multiplying the pixel offset due to current \textit{K2} motion by constant coefficients. This ensured the target traversed more pixels over a wider range of the detector while keeping the position calculation simple enough to avoid introducing new opportunity for error. Because it is still unclear exactly how increased motion will manifest in the spacecraft's observations when fuel is expended, we opted to examine the simplest case of linearly increasing motion magnitude. It should be noted that this may not be the most appropriate treatment for all de-trending methods, particularly those that rely on fitting the centroid position of the target. However, the method used in the \texttt{EVEREST} pipeline (pixel level decorrelation) is agnostic to cetroid position and relies simply on the measured flux in each pixel, so our treatment of motion is thorough enough for the goal of testing noise-removal methods. 
 
 \section{Results}
 
