corresponding fig captions

--- a/simulation.tex
+++ b/simulation.tex
@@ -85,7 +85,7 @@ We generated five synthetic light curves for each 0.5-Mag interval with the foll
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1.0\linewidth]{kepler_benchmark.pdf}
-	\caption{Benchmark Test 1: Noise level (CDPP) of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The red trend demonstrates the relationship between $Kp$ Mag and noise for the \textit{Kepler} detector with high pointing precision, with the median represented by the larger red circles outlined in black. Each blue point is a simulated light curve with no motion vectors injected into the centroid position of the PSF. The primary contributors to this trend are photon noise and background noise, which were calibrated in our simulation by matching the slope of the \textit{Kepler} trend.}
+	\caption{Benchmark Test 1: Noise level (CDPP) of our simulated light curves with no motion compared to original \textit{Kepler} targets as a function of $Kp$ Mag. The green trend demonstrates the relationship between $Kp$ Mag and noise for the \textit{Kepler} detector with high pointing precision, with the median represented by the larger green circles outlined in black. Each blue point is a simulated light curve with no motion vectors injected into the centroid position of the PSF. The primary contributors to this trend are photon noise and background noise, which were calibrated in our simulation by matching the slope of the \textit{Kepler} trend.}
 	\label{fig:nomotion}
 \end{figure}
 
@@ -98,7 +98,7 @@ With real \textit{K2} motion applied, sensitivity variation parameters were adju
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1.0\linewidth]{k2_benchmark.pdf}
-	\caption{Benchmark Test 2: Noise level (CDPP) of our simulated light curves with \textit{K2} motion compared to real \textit{K2} targets as a function of $Kp$ Mag. The points displayed in green show the noise of 1,000 raw \textit{K2} observations before de-trending with the EVEREST pipeline, and the larger green points outlined in black follow the median of the trend. Each blue point is a simulated target with current \textit{K2} motion and randomly varied initial centroid position and PSF shape. Our simulated data follow the same CDPP vs. $Kp$ Mag relationship as real data, indicating that the sensitivity variation in our model appropriately captures the detector.}
+	\caption{Benchmark Test 2: Noise level (CDPP) of our simulated light curves with \textit{K2} motion compared to real \textit{K2} targets as a function of $Kp$ Mag. The points displayed in red show the noise of 1,000 raw \textit{K2} observations before de-trending with the EVEREST pipeline, and the larger red points outlined in black follow the median of the trend. Each blue point is a simulated target with current \textit{K2} motion and randomly varied initial centroid position and PSF shape. Our simulated data follow the same CDPP vs. $Kp$ Mag relationship as real data, indicating that the sensitivity variation in our model appropriately captures the detector.}
 	\label{fig:1motion}
 \end{figure}
 
